Spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ h3 {
 
 @media(max-width:700px) {
     .facility {
-        padding-top: 50px;
+        padding-top: 0px;
     }
 }
 
